문제풀이 6번까지 완료

--- a/Metaverse_01_LevelTest/Metaverse_01_LevelTest/Metaverse_01_LevelTest.vcxproj
+++ b/Metaverse_01_LevelTest/Metaverse_01_LevelTest/Metaverse_01_LevelTest.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Solution_03.cpp" />
     <ClCompile Include="Solution_04.cpp" />
     <ClCompile Include="Solution_05.cpp" />
+    <ClCompile Include="Solution_06.cpp" />
     <ClCompile Include="Solution_07.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
