--- a/Metaverse_01_LevelTest/Metaverse_01_LevelTest/Metaverse_01_LevelTest.vcxproj.filters
+++ b/Metaverse_01_LevelTest/Metaverse_01_LevelTest/Metaverse_01_LevelTest.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="Solution_07.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Solution_06.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
