문제풀이 7번 제외 완료

--- a/Metaverse_01_LevelTest/Metaverse_01_LevelTest/Metaverse_01_LevelTest.vcxproj
+++ b/Metaverse_01_LevelTest/Metaverse_01_LevelTest/Metaverse_01_LevelTest.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Solution_05.cpp" />
     <ClCompile Include="Solution_06.cpp" />
     <ClCompile Include="Solution_07.cpp" />
+    <ClCompile Include="Solution_08.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
